--- a/new.ipynb
+++ b/new.ipynb
@@ -12,7 +12,8 @@
     "import sys\n",
     "import os\n",
     "import pandas as pd\n",
-    "import json"
+    "import json\n",
+    "import numpy as np"
    ]
   },
   {
